--- a/easy/kuk.ipynb
+++ b/easy/kuk.ipynb
@@ -327,8 +327,8 @@
     "envs = [\"Gaussian\", \"Bernoulli\"]\n",
     "\n",
     "groups = [\n",
-    "    [BT.GREEDY, BT.EPSILON_GREEDY, BT.OPTIMISTIC]\n",
-    "    #[BT.AP, BT.SOFT_MAX_AP, BT.SOFT_MAX_Q_VALUES, BT.UCB]\n",
+    "    [BT.GREEDY, BT.EPSILON_GREEDY, BT.OPTIMISTIC],\n",
+    "    [BT.AP, BT.SOFT_MAX_AP, BT.SOFT_MAX_Q_VALUES, BT.UCB]\n",
     "]\n",
     "\n",
     "k = 10\n",
@@ -406,7 +406,7 @@
     "                traces,\n",
     "                labels,\n",
     "                save=True, \n",
-    "                path=f\"./graphs{version}/{names}_{env}_trace.png\",\n",
+    "                path=f\"./graphs{version}/{names}_{env}_trace.pdf\",\n",
     "                title=f\"Accuracy over time in {envName} environment\"  \n",
     "            )\n",
     "            reward_eval(\n",
@@ -414,7 +414,7 @@
     "                env,\n",
     "                labels,\n",
     "                save=True, \n",
-    "                path=f\"./graphs{version}/{names}_{env}_reward.png\",\n",
+    "                path=f\"./graphs{version}/{names}_{env}_reward.pdf\",\n",
     "                title=f\"Average reward of agents in {envName} environment\"  \n",
     "            )\n",
     "\n",
