--- a/DRIFTAK/ANALYSIS.ipynb
+++ b/DRIFTAK/ANALYSIS.ipynb
@@ -12,6 +12,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([1.31440803e-03, 2.95144250e-03, 4.66875872e-03, ...,\n",
+       "        6.76417313e+01, 6.81298904e+01, 6.75998154e+01]),\n",
+       " array([1.73832790e-03, 3.30188661e-03, 4.92396764e-03, ...,\n",
+       "        1.28817387e+01, 1.23351250e+01, 1.29309587e+01])]"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experiment_name = \"test-1\"\n",
+    "n_runs = 2\n",
+    "\n",
+    "actor_losses = []\n",
+    "critic_losses = []\n",
+    "ep_rewards = []\n",
+    "ep_mean_rewards = []\n",
+    "\n",
+    "for run in range(n_runs):\n",
+    "    actor_losses.append(np.load(f\"./experiments/{experiment_name}/actor_loss-{run}.npy\"))\n",
+    "    critic_losses.append(np.load(f\"./experiments/{experiment_name}/critic_loss-{run}.npy\"))\n",
+    "    ep_rewards.append(np.load(f\"./experiments/{experiment_name}/episodic_reward-{run}.npy\"))\n",
+    "    ep_mean_rewards.append(np.load(f\"./experiments/{experiment_name}/episodic_mean_reward-{run}.npy\"))\n",
+    "\n",
+    "ep_rewards = np.array(ep_rewards)\n",
+    "ep_mean_rewards = np.array(ep_mean_rewards)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
